2A/05_Projet_GL/src/test/deca/context/valid/complet/71_select_protec_complexe.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    protected int x ; 
}


class B extends A {
    

}

class C extends B {

}


class D extends C {

}

class E extends D {
    int b = this.x ; 
}